--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "standard --verbose --fix | snazzy",
     "test": "nyc mocha test/setup.js '{,!(node_modules|coverage|docs)/**/}*.test.js' --color --no-timeouts"
   },
-  "keywords": [],
+  "keywords": [
+    "dynogels",
+    "DynamoDB",
+    "dynamodb"
+  ],
   "standard": {
     "env": [
       "mocha"
@@ -43,5 +47,12 @@
     "prettier-standard": "^9.1.1",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
+  },
+  "dependencies": {
+    "async": "^2.6.2",
+    "aws-sdk": "^2.437.0",
+    "bluebird": "^3.5.4",
+    "lodash": "^4.17.11",
+    "uuid": "^3.3.2"
   }
 }
