--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "standard": "^12.0.1"
   },
   "dependencies": {
-    "async": "^2.6.2",
-    "aws-sdk": "^2.437.0",
+    "async": "2.6.2",
+    "aws-sdk": "2.437.0",
     "bluebird": "^3.5.4",
     "lodash": "^4.17.11",
-    "uuid": "^3.3.2"
+    "uuid": "3.3.2"
   },
   "peerDependencies": {
     "joi": "^14.3.0"
